// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render 1`] = `
.c2 {
  color: #CCCCCC;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .Icon-sc-1cofey5-0 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .Icon-sc-1cofey5-0:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="grey3"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input should render with dense inputStyle 1`] = `
.c2 {
  color: #CCCCCC;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .Icon-sc-1cofey5-0 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .Icon-sc-1cofey5-0:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="grey3"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input should render with dense inputStyle 2`] = `
.c2 {
  color: #CCCCCC;
  font-size: 14px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .Icon-sc-1cofey5-0 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .Icon-sc-1cofey5-0:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="grey3"
      fontSize="xs"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input should render with dense inputStyle 3`] = `
.c2 {
  color: #CCCCCC;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .Icon-sc-1cofey5-0 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .Icon-sc-1cofey5-0:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="grey3"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input should render with different states 1`] = `
.c2 {
  color: #CCCCCC;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .Icon-sc-1cofey5-0 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .Icon-sc-1cofey5-0:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="grey3"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input should render with different states 2`] = `
.c2 {
  color: #55e1a7;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #55e1a7;
}

.c7 svg g,
.c7 svg p {
  fill: #55e1a7;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .c6 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .c6:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c5 {
  position: absolute;
  top: 16px;
  right: 16px;
  height: 100%;
}

.c5 > button {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  top: 28px;
  outline: none;
}

.c5 > button:focus svg {
  fill: #000000;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="success"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
  <div
    className="c5"
  >
    <span
      className="c6 c7"
      color="success"
      height={20}
      width={20}
    >
      <svg
        height={18}
        width={18}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.397 9.02l7.374-7.519A.871.871 0 0016.53.282L9.166 7.79 1.502.27a.87.87 0 10-1.22 1.243l7.653 7.508-7.653 7.507a.871.871 0 001.22 1.243l7.664-7.52 7.363 7.508a.87.87 0 001.242-1.219l-7.374-7.52z"
          fill="#999"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Input should render with different states 3`] = `
.c2 {
  color: #e24c4c;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #e24c4c;
}

.c7 svg g,
.c7 svg p {
  fill: #e24c4c;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .c6 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .c6:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c5 {
  position: absolute;
  top: 16px;
  right: 16px;
  height: 100%;
}

.c5 > button {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  top: 28px;
  outline: none;
}

.c5 > button:focus svg {
  fill: #000000;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="error"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={true}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
  <div
    className="c5"
  >
    <span
      className="c6 c7"
      color="error"
      height={20}
      width={20}
    >
      <svg
        height={20}
        width={18}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 0v1.364H1.35v17.272h13.5V10h1.35v8.636c0 .753-.604 1.364-1.35 1.364H1.35C.604 20 0 19.39 0 18.636V1.364C0 .61.604 0 1.35 0H9zm5.613 1.32a1.405 1.405 0 011.984 0l.992.991c.548.553.548 1.44 0 1.988 0 0-7.67 7.914-8.139 8.035l-1.404.351a1.405 1.405 0 01-1.704-1.702l.351-1.404c.054-.218 1.756-2.005 3.568-3.86l.436-.447a552.61 552.61 0 013.211-3.247l.345-.346.092-.092zm.992.996L9.015 8.9l.033.028.959.96 6.59-6.582-.992-.991z"
          fill="#999"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Input should render with different states 4`] = `
.c2 {
  color: #E5E5E5;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .c5 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .c5:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="grey2"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input should render with errorMessage 1`] = `
.c2 {
  color: #e24c4c;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c11 {
  color: #e24c4c;
  font-size: 12px;
  line-height: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #e24c4c;
}

.c7 svg g,
.c7 svg p {
  fill: #e24c4c;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .c6 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .c6:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c10 {
  margin-top: 8px;
}

.c8 {
  height: 8px;
  width: 100%;
  background: #e24c4c;
  border-width: 0;
  margin: 0;
}

.c9 {
  height: 2px;
  width: 100%;
  margin-bottom: 0;
  color: #e24c4c;
  margin-top: 4px;
}

.c5 {
  position: absolute;
  top: 16px;
  right: 16px;
  height: 100%;
}

.c5 > button {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  top: 28px;
  outline: none;
}

.c5 > button:focus svg {
  fill: #000000;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="error"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={true}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
  <div
    className="c5"
  >
    <span
      className="c6 c7"
      color="error"
      height={20}
      width={20}
    >
      <svg
        height={20}
        width={18}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 0v1.364H1.35v17.272h13.5V10h1.35v8.636c0 .753-.604 1.364-1.35 1.364H1.35C.604 20 0 19.39 0 18.636V1.364C0 .61.604 0 1.35 0H9zm5.613 1.32a1.405 1.405 0 011.984 0l.992.991c.548.553.548 1.44 0 1.988 0 0-7.67 7.914-8.139 8.035l-1.404.351a1.405 1.405 0 01-1.704-1.702l.351-1.404c.054-.218 1.756-2.005 3.568-3.86l.436-.447a552.61 552.61 0 013.211-3.247l.345-.346.092-.092zm.992.996L9.015 8.9l.033.028.959.96 6.59-6.582-.992-.991z"
          fill="#999"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </div>
  <hr
    className="c8 c9"
    color="error"
  />
  <div
    className="c10"
  >
    <span
      className="c11"
      color="error"
      fontSize="xxs"
    >
      error message
    </span>
  </div>
</div>
`;

exports[`Input should render with helper component 1`] = `
.c2 {
  color: #CCCCCC;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  color: #666666;
  font-size: 14px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .Icon-sc-1cofey5-0 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .Icon-sc-1cofey5-0:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
  border-radius: 12px;
  background-color: #FFFFFF;
  min-width: 0;
  width: 100%;
  padding: 8px 16px;
  line-height: 40px;
  outline: none;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c5 {
  margin-top: 8px;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="grey3"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
  <div
    className="c5"
  >
    <p
      className="c6"
      color="grey5"
      fontSize="xs"
    >
      help text
    </p>
  </div>
</div>
`;

exports[`Input should render with masked input 1`] = `
.c2 {
  color: #CCCCCC;
  font-size: 16px;
  line-height: 20px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  vertical-align: top;
  width: 100%;
}

.c0 .Icon-sc-1cofey5-0 {
  position: absolute;
  right: 0;
  top: 28px;
  outline: none;
}

.c0 .Icon-sc-1cofey5-0:focus svg {
  fill: #000000;
}

.c4 {
  border: 0;
  box-sizing: content-box;
  display: block;
  font-size: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  margin: 24px 0 0 0;
  min-width: 0;
  width: 100%;
  height: 24px;
  line-height: 24px;
  outline: none;
  position: relative;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
}

.c4::-webkit-input-placeholder {
  opacity: 0;
}

.c4::-moz-placeholder {
  opacity: 0;
}

.c4:-ms-input-placeholder {
  opacity: 0;
}

.c4::placeholder {
  opacity: 0;
}

.c4:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c4:focus::-moz-placeholder {
  opacity: 1;
}

.c4:focus:-ms-input-placeholder {
  opacity: 1;
}

.c4:focus::placeholder {
  opacity: 1;
}

.c1 {
  margin-right: 32px;
}

.c3 {
  position: absolute;
  margin-top: 4px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  transition: color 0.25s cubic-bezier(0,0,0.2,1) 0ms,top 0.25s cubic-bezier(0,0,0.2,1) 0ms;
  top: 24px;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      color="grey3"
      fontSize="sm"
    >
      
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPaste={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
</div>
`;
